--- a/assets/style.css
+++ b/assets/style.css
@@ -1,64 +1,61 @@
+
 body{
-    padding:0px;
-    margin :0px;
-    display:flex;
-    background-color:black;
-    color:white;
-    position: relative;
+    background-color: black;
 }
- h1 {
+ .logo{
 font-size:40px;
 font-style: oblique;
 width:fit-content;
-margin-left:80px;
+font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 h1::first-letter{
     color:yellowgreen;
-    font-size:80px;
+    font-size:100px;
+    font-weight:bold;
 }
-header nav{
+.navigation{
     width:fit-content;
-    position:absolute;
-    top:0;
-    bottom:0;
-    right: 0;
+    margin-top:20px;
 }
-header nav ul{
-list-style: none;
-display:flex;
-margin-right:60px;
-}
-header nav ul li{
-    display: flex;
-    padding:20px;
+.navigation>ul>li{
+padding:10px;
 font-size: 25px;
-font-weight: bolder;
+font-weight: bold;
 cursor:pointer;
-transition:transform 0.5s ease-in-out;
 }
-header nav ul li:hover{
-    color:yellowgreen;
-    transform: scale(1.5);
+.navigation>ul>li>a{
+    color:rgb(122, 174, 37);
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;   
 }
- .content h3{
-      font-weight: bolder;
-      font-size: 50px;
+.hello{
+    font-size:50px;
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-weight: bold;
+    color:rgb(150, 204, 14);
+}
+.text{
+    font-size:28px;
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 
 }
-.content p{
-    line-height: 200%;
-    font-size: 40px;
-    font-weight: bolder;
+.image{
+    width:500px;
+    height:380px;
 }
-.content p::first-letter,.content h3::first-letter{
-    font-size: 60px;
+.text::first-letter{
+    font-size:60px;
+    color:rgb(133, 179, 25);
+    font-weight:bold;
 }
-.content{
-    display:block;
-    width:fit-content;
-    height: fit-content;
-    margin:80px;
-    }
+
+.profileimg{
+    width:20rem;
+    height:18rem;
+    background-color:transparent;
+    border:solid 20px yellowgreen;
+    border-radius:50%;
+}
+
 #btn{
     font-size: 20px;
     border-radius: 10px;
@@ -75,12 +72,53 @@ background-color: azure;
 transform: scale(1.2);
 cursor: pointer;
 }
-.image{
+
+.icons i{
+    font-size:40px;
+    color:yellowgreen;
+    padding:10px;
+}
+i:hover{
+   color:rgb(112, 110, 110);
+}
+
+.skills{
+    width:140px;
+    height:140px;
+}
+.skills>img{
+    padding:20px;
+}
+.txt{
+    font-size:23px;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+.contact>input{
+    width:300px; 
+    height:40px;
+    border-radius:10px;
+    margin:15px;
+    text-align:center;
+}
+.contact>button{
+    width:300px; 
+    height:40px;
+    border-radius:10px;
+    margin:15px;
+    text-align:center;
+}
+.quote{
+    font-weight:bolder;
+    font-size: 28px; 
+    font-style:italic;
+    color:rgb(229, 223, 223);
+}
+/* .image{
     display:flex;
     align-items: flex-start;
     justify-content:center;
-}
-.image img{
+} */
+/* .image img{
     height:20%;
     width:40%;
     position:absolute;
@@ -567,6 +605,9 @@ footer{
          margin-left:0px;
          top:210%;
     }
+    .image{
+        display:none;
+    }
     footer{
         display: flex;
         justify-content:center;
@@ -601,4 +642,4 @@ footer{
 }
 
 
-
+ */
